--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -49,7 +49,7 @@ social_settings:
   facebook_url: ''
   twitter_url: ''
   instagram_url: ''
-  youtube_url: ''
+  youtube_url: 'https://youtube.com/channel/UCyPMNEEfPuRlcWVmGKGb6ug'
   vimeo_url: ''
   pinterest_url: ''
   tumblr_url: ''
