--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -31,10 +31,22 @@ blog_settings:
   # 3. Add a color of the icon - text-primary, text-success, text-info, text-danger, text-warning and text-default all work!
 menu_settings:
   menu_items:
-    - title: 'Blog'
-      url: /blog
-    - title: 'Contact'
-      url: /contact
+    - title: 'Resources'
+      submenu_items:
+      - title: Blog
+        url: /blog
+        icon: ni-books text-success
+      - title: Docs
+        url:
+        icon: ni-settings text-default
+      - title: Submit product idea
+        url: 'https://roadmap.idemeum.com/roadmaps/5fb1f2eac80bbc00293063d0/public#ideas'
+        icon: ni-bulb-61 text-primary
+    - title: 'About'
+      submenu_items:
+      - title: Contact us
+        url: /contact
+        icon: ni-collection text-success
 
 footer_settings:
   footer_tagline: idemeum
