--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           git config user.name ${{ secrets.GH_USER }}
           git config user.email "${{ secrets.GH_MAIL }}"
-          git fetch
-          git add .
-          git commit -m "Update documentation files"
-          git push
+          git remote add gh-token "https://${{ secrets.GH_TOKEN}}@github.com/:user/:repo.git"
+          git fetch gh-token && git fetch gh-token gh-pages:gh-pages
+          python -m mkdocs gh-deploy -v --clean --remote-name gh-token
+          git push gh-token gh-pages
