--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,12 +15,10 @@ jobs:
         with:
           python-version: 3.x
       - run: pip install mkdocs-material
-      - run: mkdocs build
-      - name: Deploy Files
-        run: |
+      - run: |
           git config user.name ${{ secrets.GH_USER }}
           git config user.email "${{ secrets.GH_MAIL }}"
           git remote add gh-token "https://${{ secrets.GH_TOKEN}}@github.com/:user/:repo.git"
           git fetch gh-token && git fetch gh-token gh-pages:gh-pages
-          python -m mkdocs gh-deploy -v --clean --remote-name gh-token
-          git push gh-token gh-pages
+      - run: mkdocs build
+      - run: git push gh-token gh-pages
