--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,9 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - run: pip install mkdocs-material
-      - run: |
-          git config user.name ${{ secrets.GH_USER }}
-          git config user.email "${{ secrets.GH_MAIL }}"
-          git remote add gh-token "https://${{ secrets.GH_TOKEN}}@github.com/:user/:repo.git"
-          git fetch gh-token && git fetch gh-token gh-pages:gh-pages
       - run: mkdocs build
-      - run: git push gh-token gh-pages
+      - run: git add .
+      - run: git commit - M "Adding docuemntation files"
+      - run: git push
