--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,9 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - run: pip install mkdocs-material
       - run: git fetch
-      - run: mkdocs build
+      - run: git status
+      - run: ls
+      - run: mkdocs build --clean
       - run: ls -a
       - run: git status
       - run: git add .
