--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,14 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - run: pip install mkdocs-material
       - run: git fetch
+      - run: git checkout gh-pages
       - run: git status
+      - run: git remote -v
+      - run: git branch
       - run: ls
       - run: mkdocs build --clean
       - run: ls -a
       - run: git status
       - run: git add .
-      - run: git commit - m "Adding docuemntation files"
+      - run: git commit - m "Adding documentation files"
       - run: git push
