--- a/.github/workflows/upgrade-mkdocs.yml
+++ b/.github/workflows/upgrade-mkdocs.yml
@@ -21,5 +21,5 @@ jobs:
       - run: git add .
       - run: git config --global user.email "nik@idemeum.com"
       - run: git config --global user.name "Nikolay"
-      - run: git commit -m "Adding documentation files"
+      - run: git commit -m "This is a commit triggered by workflow. Updating documentation files."
       - run: git push
