Updated the landing page

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,7 +8,7 @@ header_settings:
   # Choose a color for your header [blue, dark, light].
   theme: blue
   # If the page has a featured image, it turns transparent if allow_transparent is set to "yes".
-  allow_transparent: "yes"
+  allow_transparent: "no"
 
 home_settings:
   # Choose a layout for your home page:
@@ -31,6 +31,8 @@ blog_settings:
   # 3. Add a color of the icon - text-primary, text-success, text-info, text-danger, text-warning and text-default all work!
 menu_settings:
   menu_items:
+    #- title: 'Pricing'
+      #url: /pricing
     - title: 'Resources'
       submenu_items:
       - title: Blog
