--- a/.github/workflows/upgrade-mkdocs.yml
+++ b/.github/workflows/upgrade-mkdocs.yml
@@ -15,7 +15,7 @@ jobs:
           python-version: 3.x
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - run: pip install mkdocs-material
-      - run: git fetch
+      - run: git pull
       - run: git checkout gh-pages
       - run: mkdocs build --clean
       - run: git add .
