--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -23,7 +23,7 @@ blog_settings:
     # grid – a full-width square grid of posts
   theme: narrow
   # Should we display a narrow grid of other posts at the bottom of each blog post?
-  read_more: "yes"
+  read_more: "no"
 
 # Setup your navigation below – how to use the icons:
   # 1. See all the icons available here https://demos.creative-tim.com/argon-design-system-pro/docs/1.0/foundation/icons.html
@@ -41,24 +41,26 @@ menu_settings:
     - title: Passwordless Device Deployment
       url: /deployment
       icon: fa fa-briefcase text-success
-  - title: 'Resources'
-    submenu_items:
-    - title: Blog
-      url: /blog/
-      icon: ni-settings text-default
-    - title: Submit product idea
-      url: 'https://roadmap.idemeum.com/roadmaps/5fb1f2eac80bbc00293063d0/public#ideas'
-      icon: ni-bulb-61 text-primary
-  - title: Docs
-    url: /docs/
+  #- title: 'Resources'
+    #submenu_items:
+    #- title: Submit product idea
+      #url: 'https://roadmap.idemeum.com/roadmaps/5fb1f2eac80bbc00293063d0/public#ideas'
+      #icon: ni-bulb-61 text-primary
+  - title: Blog
+    url: /blog/
+  #- title: Docs
+    #url: /docs/
   - title: 'About us'
     submenu_items:
+    - title: About idemeum
+      url: /blog/about-idemeum
+      icon: ni ni-spaceship text-default
     - title: Contact us
       url: /contact
-      icon: fa fa-envelope text-info
+      icon: fa fa-envelope text-warning
 
 footer_settings:
-  footer_tagline: idemeum
+  footer_tagline: Digital identity for the online world.
 
 contact_settings:
   form_action: 'https://formspree.io/f/mnqovleb'
