--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -47,7 +47,7 @@ menu_settings:
        url: /blog/
        icon: ni ni-books text-warning
      - title: Videos
-       url: /videos/
+       url: /videos
        icon: ni ni-tv-2 text-info
     #- title: Submit product idea
       #url: 'https://roadmap.idemeum.com/roadmaps/5fb1f2eac80bbc00293063d0/public#ideas'
