Updated landing page

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -84,7 +84,7 @@ social_settings:
   behance_url: ''
   github_url: ''
   reddit_url: ''
-  linkedin_url: ''
+  linkedin_url: 'https://www.linkedin.com/company/idemeum/'
 
 authors:
   Nikolay:
