--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -35,7 +35,7 @@ menu_settings:
     #url: /pricing
   - title: 'For enterprises'
     submenu_items:
-    - title: Nex-Gen Passwordless MFA
+    - title: Verified Passwordless MFA
       url: /mfa
       icon: fa fa-key text-primary
     - title: Passwordless Device Deployment
