--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -33,38 +33,38 @@ menu_settings:
   menu_items:
   #- title: 'Pricing'
     #url: /pricing
-  - title: 'For enterprises'
-    submenu_items:
-    - title: Verified Passwordless MFA
-      url: /mfa
-      icon: fa fa-key text-primary
-    - title: Passwordless Device Deployment
-      url: /deployment
-      icon: fa fa-briefcase text-success
-  - title: 'Resources'
-    submenu_items:
-     - title: Blog
-       url: /blog/
-       icon: ni ni-books text-warning
-     - title: Videos
-       url: /videos
-       icon: ni ni-tv-2 text-info
+  #- title: 'For enterprises'
+    #submenu_items:
+    #- title: Verified Passwordless MFA
+      #url: /mfa
+      #icon: fa fa-key text-primary
+    #- title: Passwordless Device Deployment
+      #url: /deployment
+     # icon: fa fa-briefcase text-success
+  #- title: 'Resources'
+    #submenu_items:
+     #- title: Blog
+       #url: /blog/
+       #icon: ni ni-books text-warning
+     #- title: Videos
+       #url: /videos
+       #icon: ni ni-tv-2 text-info
     #- title: Submit product idea
       #url: 'https://roadmap.idemeum.com/roadmaps/5fb1f2eac80bbc00293063d0/public#ideas'
       #icon: ni-bulb-61 text-primary
-  - title: Docs
-    url: /docs/
-  - title: 'About us'
-    submenu_items:
-    - title: About idemeum
-      url: /blog/about-idemeum
-      icon: ni ni-spaceship text-success
+  #- title: Docs
+    #url: /docs/
+  #- title: 'About us'
+    #submenu_items:
+    #- title: About idemeum
+      #url: /blog/about-idemeum
+      #icon: ni ni-spaceship text-success
     - title: Contact us
       url: /contact
       icon: fa fa-envelope text-warning
 
-footer_settings:
-  footer_tagline: Digital identity for the online world.
+#footer_settings:
+  #footer_tagline: Digital identity for the online world.
 
 contact_settings:
   form_action: 'https://formspree.io/f/mnqovleb'
@@ -76,7 +76,7 @@ social_settings:
   facebook_url: ''
   twitter_url: ''
   instagram_url: ''
-  youtube_url: 'https://youtube.com/channel/UCyPMNEEfPuRlcWVmGKGb6ug'
+  #youtube_url: 'https://youtube.com/channel/UCyPMNEEfPuRlcWVmGKGb6ug'
   vimeo_url: ''
   pinterest_url: ''
   tumblr_url: ''
@@ -84,7 +84,7 @@ social_settings:
   behance_url: ''
   github_url: ''
   reddit_url: ''
-  linkedin_url: 'https://www.linkedin.com/company/idemeum/'
+  #linkedin_url: 'https://www.linkedin.com/company/idemeum/'
 
 authors:
   Nikolay:
