--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -31,10 +31,21 @@ blog_settings:
   # 3. Add a color of the icon - text-primary, text-success, text-info, text-danger, text-warning and text-default all work!
 menu_settings:
   menu_items:
-  - title: Docs
-    url: https://docs.idemeum.com
-  - title: 'Pricing'
-    url: /pricing
+  - title: 'For your customers'
+    submenu_items:
+     - title: 'Passwordless app login'
+       url: /forcustomers
+       icon: ni ni-single-02 text-warning
+     - title: App login demo
+       url: https://jsdemo.idemeum.com
+       icon: ni ni-tv-2 text-success
+     - title: 'Pricing'
+       url: /pricing
+       icon: ni ni-money-coins text-primary
+      #- title: Passwordless Device Deployment
+       # url: /deployment
+        #icon: fa fa-briefcase text-success
+
   #- title: 'For enterprises'
     #submenu_items:
     #- title: Verified Passwordless MFA
@@ -48,12 +59,9 @@ menu_settings:
      - title: Blog
        url: https://blog.idemeum.com
        icon: ni ni-books text-warning
-     - title: Live demo
-       url: https://jsdemo.idemeum.com
-       icon: ni ni-tv-2 text-success
-     - title: Survey
-       icon: ni ni-tv-2 text-success
-       url: /survey
+     - title: Docs
+       url: https://docs.idemeum.com
+       icon: ni ni-books text-primary
      #- title: Videos
        #url: /videos
        #icon: ni ni-tv-2 text-info
