--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -39,21 +39,21 @@ menu_settings:
      #- title: App login demo
        #url: https://jsdemo.idemeum.com
        #icon: ni ni-tv-2 text-success
-    # - title: 'Pricing'
-       #url: /pricing
-       #icon: ni ni-money-coins text-primary
-      #- title: Passwordless Device Deployment
-       # url: /deployment
-        #icon: fa fa-briefcase text-success
 
   - title: 'Solutions'
     submenu_items:
     - title: Employee IT onboarding
       url: /onboarding
       icon: ni ni-badge text-primary
-    #- title: Passwordless Device Deployment
-     # url: /deployment
-      #icon: fa fa-briefcase text-success
+    - title: Passwordless access
+      url: /access
+      icon: ni ni-key-25 text-success
+  - title: 'Pricing'
+    url: /pricing
+    icon: ni ni-money-coins text-primary
+      #- title: Passwordless Device Deployment
+       # url: /deployment
+        #icon: fa fa-briefcase text-success
   #- title: 'Resources'
     #submenu_items:
      #- title: Blog
